# zadanieRemoveWhiteSpaces

./: CMakeLists.txt  functions.cpp  functions.h  main.cpp  tests.cpp
main.dSYM/Contents/Resources/DWARF/: main
